add server actions

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL="mysql://1rbb57fljefbwre14j2d:pscale_pw_JLe9qRNxOlw178W08VicP59IUiyvQ8h8cSsonSSxjtM@aws.connect.psdb.cloud/h4b?sslaccept=strict"
 
-NEXTAUTH_SECRET="e?/XT';#|IW0Ou51rJ[(R4Lai-UH_&Y>o!~j9)A+cz8*n2]mZh"
+NEXTAUTH_SECRET="36IeEPvaIhjy8uZCPkrumkrkNbMYjmVNNBG0lXFDAxc="
 NEXTAUTH_URL="http://localhost:3000"
 
 GITHUB_CLIENT_ID="96b8ab5ae421cb1f8cc7"
