--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@uploadthing/react": "^5.1.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -32,6 +33,7 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "unique-username-generator": "^1.1.3",
+    "uploadthing": "^5.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
